--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>GIK2F8-sökfunktion</title>
+    <link rel="shortcut icon" href="#">
 </head>
+
+
 <body class="bg-gradient-to-tr from-zinc-700 to-zinc-500 h-screen">
     <h1 class="text-6xl text-amber-700 text-center mt-4 mb-7"> Sök böcker</h1>
     <main class="mx-auto bg-white/40 py-12 px-6 w-5/6 md:w-1/3 mx-auto rounded-lg flex justify-center align-center flex-col gap-2">
@@ -16,5 +19,6 @@
                 type="text">
         
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
