--- a/index.html
+++ b/index.html
@@ -16,7 +16,16 @@
         <label class="text-amber-800 text-xl block" for="searchField">Ange sökord</label> 
         <input class="rounded-full p-2" 
                 id="searchField" 
-                type="text">
+                type="text"/>
+    <ul class="book-list rounded-md border-2 border-zinc-400 bg w-full mx-auto">
+        <li class="book-list__item mb-2 mx-2 last:mb-0 p-3 text-amber-500 last:border-b-0 border-b border-zinc-700 cursor-pointer">
+            1
+        </li>
+        <li class="book-list__item mb-2 mx-2 last:mb-0 p-3 text-amber-500 last:border-b-0 border-b border-zinc-700 cursor-pointer">
+            2
+        </li>
+
+    </ul>
         
     </main>
     <script src="script.js"></script>
