--- a/index.html
+++ b/index.html
@@ -12,20 +12,13 @@
 
 <body class="bg-gradient-to-tr from-zinc-700 to-zinc-500 h-screen">
     <h1 class="text-6xl text-amber-700 text-center mt-4 mb-7"> Sök böcker</h1>
-    <main class="mx-auto bg-white/40 py-12 px-6 w-5/6 md:w-1/3 mx-auto rounded-lg flex justify-center align-center flex-col gap-2">
+    <main id="root"
+    class="mx-auto bg-white/40 py-12 px-6 w-5/6 md:w-1/3 mx-auto rounded-lg flex justify-center align-center flex-col gap-2">
         <label class="text-amber-800 text-xl block" for="searchField">Ange sökord</label> 
         <input class="rounded-full p-2" 
                 id="searchField" 
                 type="text"/>
-    <ul class="book-list rounded-md border-2 border-zinc-400 bg w-full mx-auto">
-        <li class="book-list__item mb-2 mx-2 last:mb-0 p-3 text-amber-500 last:border-b-0 border-b border-zinc-700 cursor-pointer">
-            1
-        </li>
-        <li class="book-list__item mb-2 mx-2 last:mb-0 p-3 text-amber-500 last:border-b-0 border-b border-zinc-700 cursor-pointer">
-            2
-        </li>
-
-    </ul>
+    
         
     </main>
     <script src="script.js"></script>
