--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     
         
     </main>
+    <script src="Components/BookListItem.js"></script>
+    <script src="Components/BookList.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
